# rorm-cli

./: .gitmodules  Cargo.toml  README.md  changelog.txt
.github/workflows/: build.yaml  releases.yaml
src/: entry.rs  lib.rs  main.rs
src/init/: mod.rs
src/make_migrations/: mod.rs
src/migrate/: config.rs  mod.rs  sql_builder.rs
src/squash_migrations/: mod.rs
src/utils/: bind.rs  migrations.rs  mod.rs  re.rs
