[workspace]
members = [
    ".",
    "rorm-declaration",
    "rorm-sql",
]

[package]
name = "rorm-cli"
version = "0.3.0"
edition = "2021"
authors = ["myOmikron <git@omikron.dev>"]
repository = "https://github.com/rorm-orm/rorm-cli"
keywords = ["cli", "database", "migrator", "orm"]
categories = ["command-line-utilities", "database"]
homepage = "https://rorm.rs"
documentation = "https://docs.rorm.rs"
license = "MIT"
description = "The cli tool for managing rorm applications."

[dependencies]
# Internal dependencies
rorm-declaration = { version = "~0.3", path = "rorm-declaration" }
rorm-sql = { version = "~0.3", path = "rorm-sql" }

# CLI parsing tool
clap = { version = "~4.0" }

# Serialization library
serde = { version = "~1.0" }
serde_json = { version = "~1.0" }
toml = { version = "~0.5" }

# Generic error package
anyhow = { version = "~1.0" }

# Regex
regex = { version = "~1.7" }

# Lazy implementation
once_cell = { version = "~1.16" }

# SQL database abstraction
sqlx = { version = "~0.6" }

# Runtime
tokio = { version = "~1.22" }

# Enum simplification
strum = { version = "~0.24" }

[dev-dependencies]
# Creating and clearing temporary directories
temp-dir = { version = "~0.1" }

[features]
default = [
    "sqlx/runtime-tokio-rustls",
    "sqlx/mysql",
    "sqlx/sqlite",
    "sqlx/postgres",
    "sqlx/any",
    "sqlx/chrono",

    "tokio/macros",

    "serde/derive",

    "clap/derive",

    "rorm-sql/sqlite",
    "rorm-sql/postgres",
    "rorm-sql/mysql",
]
