[package]
name = "rorm-cli"
version = "0.8.0"
edition = "2021"
authors = ["myOmikron <git@omikron.dev>"]
repository = "https://github.com/rorm-orm/rorm-cli"
keywords = ["cli", "database", "migrator", "orm"]
categories = ["command-line-utilities", "database"]
homepage = "https://rorm.rs"
documentation = "https://docs.rorm.rs"
license = "MIT"
description = "The cli tool for managing rorm applications."

[lib]
path = "src/lib.rs"
name = "rorm_cli"

[[bin]]
name = "rorm-cli"
path = "src/main.rs"

[dependencies]
# Internal dependencies
rorm-declaration = { version = "~0.4", path = "../rorm-declaration" }
rorm-sql = { version = "~0.8", path = "../rorm-sql" }
rorm-db = { version = "~0.9", path = "../rorm-db" }

# CLI parsing tool
clap = { version = "~4", features = ["derive"] }

# Serialization library
serde = { version = "~1", features = ["derive"] }
serde_json = { version = "~1" }
toml = { version = "~0.7" }

# Generic error package
anyhow = { version = "~1" }

# Regex
regex = { version = "~1" }

# Lazy implementation
once_cell = { version = "~1" }

# Runtime
tokio = { version = ">=1.23.1", features = ["macros", "rt"], optional = true }

# Enum simplification
strum = { version = "~0.25" }

# Read passwords from cli
rpassword = { version = "~7" }

[dev-dependencies]
# Creating and clearing temporary directories
temp-dir = { version = "~0.1" }

[features]
default = [
    "tokio",
    "sqlite",
    "mysql",
    "postgres",
]

tokio = [
    "dep:tokio",
    "rorm-db/tokio",
]

sqlite = [
    "rorm-db/sqlite",
    "rorm-declaration/sqlite",
    "rorm-sql/sqlite",
]
mysql = [
    "rorm-db/mysql",
    "rorm-declaration/mysql",
    "rorm-sql/mysql",
]
postgres = [
    "rorm-db/postgres",
    "rorm-declaration/postgres",
    "rorm-sql/postgres",
]
